<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tickey</string>
    <string name="register">Register</string>
    <string name="share">Share</string>
    <string name="feed">News Feed</string>
    <string name="birth_date">birth date</string>
    <string name="scanning_lines"><![CDATA[scanning for <font color="#8DC43F">lines...</font>]]></string>
    <string name="check_for_tickets"><![CDATA[checking for <font color="#8DC43F">tickets...</font>]]></string>
    <string name="tickets_count">%d tickets left</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="confim_password">confirm password</string>
    <string name="sign_in">sing in</string>
    <string name="loading">Loading...</string>
    <string name="logout">Logout</string>
    <string name="go">GO</string>
    <string name="buy">buy</string>
    <string name="remember_me">remember me</string>
    <string name="you_are_in_bus">You are in bus 280</string>
    <string name="checked_in">You are checked in</string>
    <string name="sign_up"><u>not registered?</u></string>
    <string name="facebook_login">login with facebook</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="app_id">773538616052349</string>

    <plurals name="likes">
        <item quantity="one">like</item>
        <item quantity="other">likes</item>
    </plurals>

</resources>