<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tickey.app.LoginActivity" >

    <ImageView
        android:id="@+id/ivLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="@dimen/login_width"
        android:layout_height="match_parent"
        android:layout_above="@+id/btRegister"
        android:layout_below="@+id/ivLogin"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/green_rounded_rectangle"
            android:orientation="vertical"
            android:padding="20dp" >

            <EditText
                android:id="@+id/etEmail"
                style="@style/FormInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/user"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/dark_gray"
                android:textColorHint="@color/dark_gray"
                android:textSize="@dimen/form_text" >
            </EditText>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/line"
                android:scaleType="fitCenter" />

            <EditText
                android:id="@+id/etPassword"
                style="@style/FormInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/pass"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/dark_gray"
                android:textColorHint="@color/dark_gray" />
        </LinearLayout>

        <Button
            android:id="@+id/btSignIn"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/dark_gray_button_selector"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:textSize="@dimen/form_text" />

        <com.facebook.widget.LoginButton
            android:id="@+id/authButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />

        <CheckBox
            android:id="@+id/cbRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textSelectHandle="@dimen/checkbox_label" />
    </LinearLayout>

    <Button
        android:id="@+id/btRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:text="@string/sign_up"
        android:textSize="@dimen/link_text" />

</RelativeLayout>