<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_background"
    android:orientation="vertical"
    tools:context="com.tickey.app.SearchTicketsActivity$PlaceholderFragment" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/backkground_main" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:background="@color/white_transparent"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin" >

        <com.tickey.app.view.custom.RoundedImageView
            android:id="@+id/imageView1"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/profil_small" />

        <ImageView
            android:id="@+id/ivLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/exit" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@+id/ivLogout"
            android:layout_toRightOf="@+id/imageView1"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pesho Peshov"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/tvTicketsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tickets_count"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/tvScanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/llBuy"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bus" />

        <TextView
            android:id="@+id/tvYouAreInBus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/you_are_in_bus"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btBuy"
            android:layout_width="228dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/dark_gray_button_selector"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/buy"
            android:textColor="@android:color/white"
            android:textSize="@dimen/form_text" />
    </LinearLayout>

</RelativeLayout>